--- a/IdentityWithSpieser/Components/Layout/NavMenu.razor
+++ b/IdentityWithSpieser/Components/Layout/NavMenu.razor
@@ -25,6 +25,42 @@
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
             </NavLink>
         </div>
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="create-user">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Create User
+            </NavLink>
+        </div>
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="users-list-virtualize">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> List of Users (with Virt)
+            </NavLink>
+        </div>
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="users-list-with-edit">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> List of Users (with Edit)
+            </NavLink>
+        </div>
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="create-role">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Create Role
+            </NavLink>
+        </div>
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="roles-list">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> List of Roles
+            </NavLink>
+        </div>
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="virtualized-example">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Virtualized Example
+            </NavLink>
+        </div>
     </nav>
 </div>
 
