--- a/IdentityWithSpieser/Components/Forms/CreateRoleForm.razor
+++ b/IdentityWithSpieser/Components/Forms/CreateRoleForm.razor
@@ -3,12 +3,12 @@
 @inject NavigationManager NavigationManager
 @inject RoleManager<ApplicationRole> _roleManager;
 
-<EditForm id="create-role-form" Model="role" OnSubmit="FormSubmitted" FormName="CreateRoleForm">
+<EditForm id="create-role-form" Model="roleDto" OnSubmit="FormSubmitted" FormName="CreateRoleForm">
     <h4>Create New Role</h4>
     <div>
         <label>
             Name:
-            <InputText @bind-Value="role.Name" />
+            <InputText @bind-Value="roleDto.Name" />
         </label>
     </div>
 
@@ -19,10 +19,9 @@
 
 @code {
     [SupplyParameterFromForm]
-    //private ApplicationRole role { get; set; }
-    private Role role { get; set; }
+    private ApplicationRoleDto roleDto { get; set; }
 
-    protected override void OnInitialized() => role ??= new();
+    protected override void OnInitialized() => roleDto ??= new();
 
     private string LastSubmitResult = "";
     //private void Submit() => Logger.LogInformation("Id = {Id}", Model?.Id);
@@ -37,25 +36,10 @@
 
         if (formIsValid)
         {
-            var result = await _roleManager.CreateAsync(new ApplicationRole() { Name = role.Name });
+            var result = await _roleManager.CreateAsync(new ApplicationRole() { Name = roleDto.Name });
             if (result.Succeeded)
             {
-                // For more information on how to enable account confirmation and password reset please visit http://go.microsoft.com/fwlink/?LinkID=532713
-                //
-                // Send an email with this link
-                // var code = await _userManager.GenerateEmailConfirmationTokenAsync(user);
-                //
-                // var callbackUrl = Url.Action("ConfirmEmail", "Account", new { userId = user.Id, code = code }, protocol: HttpContext.Request.Scheme);
-                //
-                // await _emailSender.SendEmailAsync(model.Email, "Confirm your account",
-                //    "Please confirm your account by clicking this link: <a href=\"" + callbackUrl + "\">link</a>");
-                //
-                // await _signInManager.SignInAsync(user, isPersistent: false);
-                //
-                // _logger.LogInformation(3, "User created a new account with password.");
-                //
-                // return RedirectToLocal(returnUrl);
-                NavigationManager.NavigateTo("/submitted-test");
+                NavigationManager.NavigateTo("/success");
             }
             else
             {
