--- a/IdentityWithSpieser/Components/Pages/Shared/Success.razor
+++ b/IdentityWithSpieser/Components/Pages/Shared/Success.razor
@@ -11,7 +11,7 @@
 <br />
 <NavLink href="/users-list-virtualize">List of Users (Virtualize)</NavLink>
 <br />
-<NavLink href="/users-list-dynamic">List of Users (Dynamic)</NavLink>
+<NavLink href="/users-list-with-edit">List of Users (with Edit)</NavLink>
 <br />
 <NavLink href="/create-role">Create Role</NavLink>
 <br />
