--- a/IdentityWithSpieser/Components/_Imports.razor
+++ b/IdentityWithSpieser/Components/_Imports.razor
@@ -12,6 +12,7 @@
 
 @using IdentityWithSpieser
 @using IdentityWithSpieser.Components
+@using IdentityWithSpieser.Components.Forms
 @using IdentityWithSpieser.Components.Pages.Shared
 @using IdentityWithSpieser.Models
 
