--- a/IdentityWithSpieser/Components/Pages/UsersListWithEdit.razor
+++ b/IdentityWithSpieser/Components/Pages/UsersListWithEdit.razor
@@ -1,6 +1,6 @@
 ﻿@page "/users-list-with-edit"
-@rendermode InteractiveServer
-
+@* @rendermode InteractiveServer *@
+@rendermode @(new InteractiveServerRenderMode(prerender: false))
 
 @code 
 {
