--- a/IdentityWithSpieser/Components/_Imports.razor
+++ b/IdentityWithSpieser/Components/_Imports.razor
@@ -8,12 +8,16 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.AspNetCore.Identity
 @using Microsoft.JSInterop
-@using Radzen.Blazor
 
 @using IdentityWithSpieser
 @using IdentityWithSpieser.Components
 @using IdentityWithSpieser.Components.Forms
 @using IdentityWithSpieser.Components.Pages.Shared
 @using IdentityWithSpieser.Models
+
+@using Radzen
+@using Radzen.Blazor
+
+
 
 
